fix stretch button

--- a/client/src/app/components/main-chat/main-chat.component.scss
+++ b/client/src/app/components/main-chat/main-chat.component.scss
@@ -101,3 +101,8 @@ h2 {
 app-chat-text-entry {
     margin-top: auto;
 }
+
+.messages {
+    flex-grow: 1;
+    overflow-y: scroll;
+}
