--- a/client/src/app/components/ui/solid-button/solid-button.component.scss
+++ b/client/src/app/components/ui/solid-button/solid-button.component.scss
@@ -9,6 +9,11 @@
     box-sizing: border-box;
 }
 
+button.stretch {
+    width: 100%;
+    box-sizing: border-box;
+}
+
 .button {
     display: flex;
     flex-direction: row;
